--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,13 @@
 name: Build & Release DevOS Tools
+permissions:
+  contents: write
 
 on:
   push:
     tags:
       - 'v*' # Запуск только на теги v1.0.0, v2.0.0 и т.д.
   workflow_dispatch: # Ручной запуск
-  permissions:
-  contents: write
-
+  
 jobs:
   build-and-release:
     name: Build & Release
@@ -35,6 +35,29 @@ jobs:
           sudo apt-get update
           # libpcap (d-shark), libssl (d-ransom), build-essential (gcc)
           sudo apt-get install -y libpcap-dev libssl-dev pkg-config build-essential libudev-dev
+
+      # --- TESTS FOR TOOLS ---
+      - name: Test Go tools
+        run: |
+          set -e
+          echo "Running Go tests for modules under tools/"
+          for d in tools/*; do
+            if [ -f "$d/go.mod" ]; then
+              echo "--- Testing $d ---"
+              (cd "$d" && go test ./...) || exit 1
+            fi
+          done
+
+      - name: Test Rust tools
+        run: |
+          set -e
+          echo "Running Rust tests for crates under tools/"
+          for d in tools/*; do
+            if [ -f "$d/Cargo.toml" ]; then
+              echo "--- Testing $d ---"
+              (cd "$d" && cargo test --all) || exit 1
+            fi
+          done
 
       # --- BUILD ---
       - name: Build All Tools via Makefile
